<resources>
    <string name="app_name">Socially</string>
    <string name="welcome_to">Welcome to</string>
    <string name="socially">Socially</string>
    <string name="next">Next</string>
    <string name="feed">Feed</string>
    <string name="menu_home">Home</string>
    <string name="menu_comments">Comments</string>
    <string name="menu_liked">Liked</string>
    <string name="menu_profile">Profile</string>
    <string name="add">Add</string>
</resources>