<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:contentDescription="@string/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_comments"
        android:contentDescription="@string/menu_comments"
        android:icon="@drawable/ic_comments"
        android:title="@string/menu_comments"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_liked"
        android:contentDescription="@string/menu_liked"
        android:icon="@drawable/ic_liked"
        android:title="@string/menu_liked"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_profile"
        android:contentDescription="@string/menu_liked"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_liked"
        android:visible="true"
        app:showAsAction="always" />
</menu>